--- a/.github/workflows/gitAction.yml
+++ b/.github/workflows/gitAction.yml
@@ -1,9 +1,12 @@
 name: eslint-actions
 on: push
 jobs:
-  check-bats-version:
+  linter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: make lint
+      -name: npm install
+        -run: make install
+      -name: Run Linter 
+       - run: make lint
