--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,9 @@
 env:
   browser: true
   es2021: true
+  node: true
 extends:
   - airbnb-base
-parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 12
   sourceType: module
