--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
+  "type": "module",
   "description": "First project",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +14,6 @@
     "type": "git",
     "url": "git+https://github.com/darya448/frontend-project-lvl1.git"
   },
-  "type": "module",
   "author": "darya",
   "license": "ISC",
   "bugs": {
